--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ dependencies = [
         "numpy >=1.20,<2",
         "h5py >=3.5",
         "accelerate>=0.26.0",
-        "tqdm >=4.30.0"
+        "tqdm >=4.30.0",
+        "wandb >= 0.15.0"
     ]
 
 [project.scripts]
